shelter counter working

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <p>now, it is time to rebuild</p>
     <button id='buildShelter'>build shelter</button>
 
+    <div id='villageContent'>
+        <!-- The various items you add to your community will appear here -->
+        <div id='shelterCounter'></div>
+    </div>
+
     <script src="js/app.js"></script>
 </body>
 </html>
