--- a/index.html
+++ b/index.html
@@ -11,11 +11,16 @@
     <h1>it's getting colder</h1>
     <p>your community has just survived a devastating winter</p>
     <p>now, it is time to rebuild</p>
-    <button id='buildShelter'>build shelter</button>
+    
+    <div id='controls'>
+        <button id='buildShelter'>build shelter</button>
+        <button id='buildFarmPlot'>build farm plot</button>
+    </div>
 
     <div id='villageContent'>
         <!-- The various items you add to your community will appear here -->
-        <div id='shelterCounter'></div>
+        <div id='shelterCounter'>Shelters: <span id='shelterNum'></span></div>
+        <div id='farmPlotCounter'>Farm Plots: <span id='farmPlotNum'></span></div>
     </div>
 
     <script src="js/app.js"></script>
