--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <title>it's getting colder</title>
 </head>
 <body>
-    <h1>it's getting colder</h1>
-    <p>your community has just survived a devastating winter</p>
-    <p>now, it is time to rebuild</p>
+    <div id='introText'>
+        <h1>it's getting colder</h1>
+        <p>your community has just survived a devastating winter</p>
+        <p>now, it is time to rebuild</p>
+    </div>
     
     <div id='controls'>
         <button id='buildShelter'>build shelter</button>
