--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
         <div id='farmPlotCounter'>Farm Plots: <span id='farmPlotNum'></span></div>
     </div>
 
+    <div id="seasonDisplay"></div>
+
     <script src="js/app.js"></script>
 </body>
 </html>
