purchase mechanic added

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <!-- The various items you add to your community will appear here -->
         <div id='shelterCounter'>Shelters: <span id='shelterNum'></span></div>
         <div id='farmPlotCounter'>Farm Plots: <span id='farmPlotNum'></span></div>
+        <div id='foodCounter'>Food: <span id='foodNum'></span></div>
     </div>
 
     <div id="seasonDisplay"></div>
