new object for buildable items to track price

--- a/index.html
+++ b/index.html
@@ -15,15 +15,16 @@
     </div>
     
     <div id='controls'>
+        <button id="gatherFood">gather food</button>
         <button id='buildShelter'>build shelter</button>
         <button id='buildFarmPlot'>build farm plot</button>
     </div>
-
+    <br/>
     <div id='villageContent'>
         <!-- The various items you add to your community will appear here -->
+        <div id='foodCounter'>Food: <span id='foodNum'></span></div>
         <div id='shelterCounter'>Shelters: <span id='shelterNum'></span></div>
         <div id='farmPlotCounter'>Farm Plots: <span id='farmPlotNum'></span></div>
-        <div id='foodCounter'>Food: <span id='foodNum'></span></div>
     </div>
 
     <div id="seasonDisplay"></div>
