added alerts section

--- a/index.html
+++ b/index.html
@@ -23,12 +23,19 @@
     <div id='villageContent'>
         <!-- The various items you add to your community will appear here -->
         <div id='foodCounter'>Food: <span id='foodNum'></span></div>
+        <div id='populationCounter'>Population: <span id="populationNum"></span></div>
         <div id='shelterCounter'>Shelters: <span id='shelterNum'></span></div>
         <div id='farmPlotCounter'>Farm Plots: <span id='farmPlotNum'></span></div>
     </div>
 
-    <div id="seasonDisplay"></div>
+    <div id="alertBox">
 
+    </div>
+
+    <div id='seasonDisplay'></div>
+        <p>alerts will appear here</p>
+        <button>option 1</button>
+        <button>option 2</button>
     <script src="js/app.js"></script>
 </body>
 </html>
