added basic pause functionality

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <button id="gatherFood">gather food</button>
         <button id='buildShelter'>build shelter</button>
         <button id='buildFarmPlot'>build farm plot</button>
+        <button id="pause">Pause</button>
     </div>
     <br/>
     <div id='villageContent'>
