basic alert with buttons added

--- a/index.html
+++ b/index.html
@@ -18,25 +18,23 @@
         <button id="gatherFood">gather food</button>
         <button id='buildShelter'>build shelter</button>
         <button id='buildFarmPlot'>build farm plot</button>
-        <button id="pause">Pause</button>
+        <button id="pause">pause</button>
     </div>
     <br/>
     <div id='villageContent'>
         <!-- The various items you add to your community will appear here -->
-        <div id='foodCounter'>Food: <span id='foodNum'></span></div>
-        <div id='populationCounter'>Population: <span id="populationNum"></span></div>
-        <div id='shelterCounter'>Shelters: <span id='shelterNum'></span></div>
-        <div id='farmPlotCounter'>Farm Plots: <span id='farmPlotNum'></span></div>
+        <div id='foodCounter'>food: <span id='foodNum'></span></div>
+        <div id='populationCounter'>population: <span id="populationNum"></span></div>
+        <div id='shelterCounter'>shelters: <span id='shelterNum'></span></div>
+        <div id='farmPlotCounter'>farm plots: <span id='farmPlotNum'></span></div>
     </div>
 
-    <div id="alertBox">
-
+    <div id="alertDiv">
+        <p id="alertP"></p>
     </div>
 
     <div id='seasonDisplay'></div>
-        <p>alerts will appear here</p>
-        <button>option 1</button>
-        <button>option 2</button>
+
     <script src="js/app.js"></script>
 </body>
 </html>
