made build shelter button appear at the right time

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     
     <div id='controls'>
         <button id="gatherFood">gather food</button>
-        <button id='buildShelter'>build shelter</button>
+        <!-- <button id='buildShelter'>build shelter</button> -->
         <button id='buildFarmPlot'>build farm plot</button>
         <button id="pause">pause</button>
     </div>
