--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
     
     <div id='controls'>
         <button id="gatherFood">gather food</button>
-        <!-- <button id='buildShelter'>build shelter</button> -->
-        <button id='buildFarmPlot'>build farm plot</button>
-        <button id="pause">pause</button>
+        <!-- <button id='buildFarmPlot'>build farm plot</button> -->
+        <!-- <button id="pause">pause</button> -->
     </div>
     <br/>
     <div id='villageContent'>
