--- a/index.html
+++ b/index.html
@@ -26,12 +26,13 @@
         <div id='populationCounter'>population: <span id="populationNum"></span></div>
         <div id='shelterCounter'>shelters: <span id='shelterNum'></span></div>
         <div id='farmPlotCounter'>farm plots: <span id='farmPlotNum'></span></div>
-        <div id='foodStorageCounter'>food storage: <span id='foodStorageNum'></span></div>
+        <div id='foodStorageCounter'>silos: <span id='foodStorageNum'></span></div>
     </div>
 
     <div id="alertDiv">
         <p id="alertP"></p>
     </div>
+    <div id="outcome"></div>
 
     <div id='seasonDisplay'></div>
 
