further styling updates

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
         <div id="game">
             <h1>it's getting colder</h1>
-            <h2>your community has just survived a devastating winter<br/>now, it is time to rebuild</h2>
+            <h2>you have just survived a devastating winter<br/>now, it is time to rebuild</h2>
             <div id='outcome'>
                 <p>your community has just survived a devastating winter</p>
                 <p>now, it is time to rebuild</p>
