--- a/index.html
+++ b/index.html
@@ -16,24 +16,24 @@
         </div>
         <div id="game">
             <h1>it's getting colder</h1>
-            <div id='outcome'>
-                <p>your community has just survived a devastating winter</p>
-                <p>now, it is time to rebuild</p>
+            <div id="outcome">
+                your community has just survived a devastating winter<br/><br/>
+                now, it is time to rebuild
              </div>
         
-        <div id='controls'>
+        <div id="controls">
             <button id="gatherFood">gather food</button>
             <!-- <button id='buildFarmPlot'>build farm plot</button> -->
             <!-- <button id="pause">pause</button> -->
         </div>
         <br/>
-        <div id='villageContent'>
+        <div id="villageContent">
             <!-- The various items you add to your community will appear here -->
-            <div id='foodCounter'>food: <span id='foodNum'></span></div>
-            <div id='populationCounter'>population: <span id="populationNum"></span></div>
-            <div id='shelterCounter'>shelters: <span id='shelterNum'></span></div>
-            <div id='farmPlotCounter'>farm plots: <span id='farmPlotNum'></span></div>
-            <div id='foodStorageCounter'>silos: <span id='foodStorageNum'></span></div>
+            <div id="foodCounter">food: <span id="foodNum"></span> (max: <span id="foodCapacity"></span>)</div>
+            <div id="populationCounter">population: <span id="populationNum"></span></div>
+            <div id="shelterCounter">shelters: <span id="shelterNum"></span> (cost: <span id="shelterCost"></span>)</div>
+            <div id="farmPlotCounter">farm plots: <span id="farmPlotNum"></span> (cost: <span id="farmPlotCost"></span>)</div>
+            <div id="foodStorageCounter">silos: <span id="foodStorageNum"></span> (cost: <span id="foodStorageCost"></span>)</div>
         </div>        
         <div id='seasonDisplay'></div>
     </div>
