re-added pause button

--- a/index.html
+++ b/index.html
@@ -23,8 +23,6 @@
         
         <div id="controls">
             <button id="gatherFood">gather food</button>
-            <!-- <button id='buildFarmPlot'>build farm plot</button> -->
-            <!-- <button id="pause">pause</button> -->
         </div>
         <br/>
         <div id="villageContent">
@@ -36,6 +34,9 @@
             <div id="foodStorageCounter">silos: <span id="foodStorageNum"></span> (cost: <span id="foodStorageCost"></span>)</div>
         </div>        
         <div id='seasonDisplay'></div>
+        <div id="pauseDiv">
+            <button id="pause">pause</button>
+        </div>
     </div>
     
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script> -->
