added progress bar

--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
             <div id="farmPlotCounter">farm plots: <span id="farmPlotNum"></span> (cost: <span id="farmPlotCost"></span>)</div>
             <div id="foodStorageCounter">silos: <span id="foodStorageNum"></span> (cost: <span id="foodStorageCost"></span>)</div>
         </div>        
-        <div id='seasonDisplay'></div>
+        <div id="progressBarBorder">
+            <div id="progressBar"></div>
+        </div>
         <div id="pauseDiv">
             <button id="pause">pause</button>
         </div>
