--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
             <div id="foodStorageCounter">silos: <span id="foodStorageNum"></span> (cost: <span id="foodStorageCost"></span>)</div>
         </div>        
         <div id="progressBarBorder">
-            <div id="progressBar"></div>
+            <div id="progressBar">
+                <div id="progressBarText"></div>
+            </div>
         </div>
         <div id="pauseDiv">
             <button id="pause">pause</button>
