undoing changes from new branch

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <p id="alertP"></p>
         </div>
         <div id="game">
-            <h1>it's getting colder - new branch</h1>
+            <h1>it's getting colder</h1>
             <div id="outcome">
                 your community has just survived a devastating winter<br/><br/>
                 now, it is time to rebuild
