added reset button to page, no function yet

--- a/index.html
+++ b/index.html
@@ -38,8 +38,13 @@
                 <div id="progressBarText"></div>
             </div>
         </div>
-        <div id="pauseDiv">
-            <button id="pause">pause</button>
+        <div id="pauseAndReset">
+            <div id="pauseDiv">
+                <button id="pause">pause</button>
+            </div>
+            <div id="resetDiv">
+                <button id="reset">reset</button>
+            </div>
         </div>
     </div>
     
