clearEventCheckers needs updates

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <div id="game">
             <h1>it's getting colder</h1>
             <div id="outcome">
-                your community has just survived a devastating winter<br/><br/>
-                now, it is time to rebuild
+                your community has just survived a devastating winter.<br/><br/>
+                now, it is time to rebuild.
             </div>
         
         <div id="controls">
